<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <TextView
            android:id="@+id/title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/example_title"
            android:textSize="22sp"
            android:textStyle="bold"
            />
        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"

            android:scaleType="centerCrop"
            />
        <TextView
            android:id="@+id/description_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            tools:text="@string/example_description"/>

        <TextView
            android:id="@+id/author_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/example_author"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/date_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                tools:text="@string/example_date"/>
            <TextView
                android:id="@+id/time_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/example_time"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
